@@ -16,6 +16,7 @@ src/gnome-cmd-chmod-dialog.cc
 src/gnome-cmd-chown-component.cc
 src/gnome-cmd-chown-dialog.cc
 src/gnome-cmd-con-device.cc
+src/gnome-cmd-con-dialog.cc
 src/gnome-cmd-con-ftp.cc
 src/gnome-cmd-con-home.cc
 src/gnome-cmd-con-smb.cc
